--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section class="stories">
       <div class="card">
-        <img src="./assets/images/post-1.jpg" alt="" />
+        <img src="./assets/images/logo.png" alt="" />
       </div>
     </section>
   </body>
