--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="nav-wrapper">im</div>
-    </nav>
-
+              <div class="nav-wrapper">
+                     <img src="./assets/images/logo.png" alt="" class="brand-img">
+                     <input type="text" class="searxh-box" placeholder="search">
+              </div>
+      
     <section class="stories">
       <div class="card">
         <img src="./assets/images/post-1.jpg" alt="" />
