--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <nav class="navbar">
+              <div class="nav-wrapper">
+                     <img src="./assets/images/logo.png" alt="" class="brand-img">
+                     <input type="text" class="searxh-box" placeholder="search">
+              </div>
+       </nav>
+    <nav class="navbar">
       <div class="nav-wrapper">im</div>
     </nav>
 
